--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/hangman/favicon.ico" />
+    <link rel="icon" href="https://icons8.com/icon/C0OlmEtPINkM/capital" />
+    <!-- <a target="_blank" href="https://icons8.com/icon/C0OlmEtPINkM/capital">Capital</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
